feat: Update mediator